--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=MyAudioLib
 APP_ENV=local
 APP_KEY=base64:5pP1eQON8R4h6LZyuVLK3JYjTv2Z5zhzn+HQj/nOtJE=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
